# matrix

./: CMakeLists.txt  HELP  compile.c  file.c  kernel.cl  matrix.c  matrix.csv  process.c  program.c
